[package]
name = "moosicbox_metaflac"
version = "0.1.0"
authors = ["James Hurst <james@jameshurst.ca>", "Braden Steffaniak"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MoosicBox/rust-metaflac"
repository = "https://github.com/MoosicBox/rust-metaflac"
documentation = "https://MoosicBox.github.io/rust-metaflac"
description = "A library for reading and writing FLAC metadata, modified for MoosicBox."
keywords = ["flac", "audio", "parser", "metadata"]
edition = "2018"

[lib]
name = "moosicbox_metaflac"
crate-type = ["rlib"]

[dependencies]
log = "0.4.11"
hex = "0.4.2"
byteorder = "^1.3.4"
